# internal/application/apis/dynamicdata/routes.go
@@ -1,0 +1,9 @@
+package dynamicdata
+
+import "github.com/rnium/rhttp/pkg/rhttp"
+
+
+func Register(r *rhttp.Router) {
+	r.Get("/base64/:value", decodeBase64Handler)
+	r.Get("/uuid", uuidGenHandler)
+}
